# PowerProfilesDaemonGUI

./: .gitignore  CMakeLists.txt  README.md  main_window.cpp  main_window.hpp
assets/: com.github.brookiestein.powerprofilesdaemongui.desktop
src/: CMakeLists.txt  config.hpp.in  dbus_manager.cpp  dbus_manager.hpp  main.cpp  main_window.cpp  main_window.hpp  resources.xml
